Fixed header spacing issues

--- a/client/src/styles/scss/header.scss
+++ b/client/src/styles/scss/header.scss
@@ -69,7 +69,7 @@
                 // display: none;
                 position: absolute;
                 z-index: 1 !important;
-                margin-top: -48px;;
+                margin-top: -50px;
                 @include translateY(100px);
                 @include transition(.3s ease-in-out);
             }
@@ -108,9 +108,8 @@
                     display: flex;
                     height: 100%;
                     // height: 30px;
-                    bottom: 2px;
                     left: 0px;
-                    padding: 0px 30px;
+                    padding: 4px 30px;
                     background: url("../../assets/white-pixel.png");
                     background-size: 100%;
                     width: 100%;
